[tool.poetry]
name = "repl_nix_starapiwebsite"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
uvicorn = "^0.29.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
